# Computer-Vision

./: .gitignore  README.md
YOLO-Image-Detector/: README.md  main.py  pyproject.toml  requirements.txt
YOLO-Image-Detector/weights/: Help.txt
YOLO-Video-Detector/: README.md  main.py  requirements.txt
YOLO-Video-Detector/weights/: Help.txt
