[project]
name = "yolo-image-detector"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pandas==2.2.2",
    "pillow==10.2.0",
    "psutil==5.9.8",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "scipy==1.11.4",
    "seaborn==0.13.2",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm==4.66.2",
    "ultralytics==8.3.27",
]
